tests/fixtures/invalid/set_div_none.py
# Cannot divide Set[int] and None
x: float = {1, 2, 3} / None
